--- a/style.css
+++ b/style.css
@@ -69,10 +69,6 @@ body {
     font-weight: 400;
 }
 
-.bottomBox {
-      
-}
-
 .bottom {
     background-color: #292929; /* Blurred background color */
     width: auto;
@@ -88,7 +84,7 @@ body {
 }
 
 .bottom h1 {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .bottom h5 {
@@ -377,7 +373,7 @@ body {
   }
   
   .bounce-in {
-    animation: bounce-in 2s ease infinite;
+    animation: bounce-in 3s ease infinite;
   }
   @keyframes bounce-in {
     0% {
@@ -540,5 +536,22 @@ footer a:hover {
 
 footer h5 {
     font-weight: 300;
+}
 
+.list-group { 
+  position: sticky; 
+  top: 10px; 
+} 
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #141414;
+}
+
+button:hover {
+  color: #141414;
 }
