--- a/style.css
+++ b/style.css
@@ -512,6 +512,10 @@ body {
     color: white;
   }
 
+  .accordion-button:hover {
+    color: #e5e5e5;
+  }
+
   .accordion-button {
     background-color: rgba(36, 33, 33, 0.7);
     color: white;
