--- a/style.css
+++ b/style.css
@@ -101,6 +101,34 @@ body {
   margin-right: 150px;
 }
 
+/*for Demo Only*/
+.demo-row {
+  padding: 50px 0;
+}
+
+
+/*Implement*/
+.sponsor-feature {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    min-height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+#id-sponsors .carousel {
+    margin-bottom: 20px;
+}
+#id-sponsors .item {
+    padding-bottom: 20px;
+}
+#id-sponsors .carousel-indicators {
+    bottom: -25px;
+}
+
 .bounce {
   animation: bounce 2s ease infinite;
 }
