integrated Airtable, and sponsor section to the website

--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 body {
-    background-color: #141414;
-    font-family: 'Inter', sans-serif;
-    color: whitesmoke;
-    margin: 0;
-    height: 100%;
-    overflow-x: hidden;
+  background-color: #141414;
+  font-family: "Inter", sans-serif;
+  color: whitesmoke;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .header {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .content {
-    margin-left: 100px;
+  margin-left: 100px;
 }
 
 .content h5 {
-    color: #e5e5e5;
-    font-weight: 300;
+  color: #e5e5e5;
+  font-weight: 300;
 }
 
 .content h1 {
-    font-size: 4em;
+  font-size: 4em;
 }
 
 .emp {
@@ -29,71 +29,71 @@ body {
 }
 
 .timer {
-     text-align: center;
-     padding: 20px;
-      width: 350px;
-      height: auto;
-      background-color: rgba(36, 33, 33, 0.7); /* Blurred background color */
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      animation: timer 0.6s both;
+  text-align: center;
+  padding: 20px;
+  width: 350px;
+  height: auto;
+  background-color: rgba(36, 33, 33, 0.7); /* Blurred background color */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  animation: timer 0.6s both;
 }
 
- @keyframes timer {
-    0%,
-    50%,
-    100% {
-      opacity: 1;
-    }
-    25%,
-    75% {
-      opacity: 0;
-    }
+@keyframes timer {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
   }
-  
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+
 .spacer {
-    height: 20vh;
+  height: 20vh;
 }
 
 .intro {
-    margin-left: 200px;
-    margin-right: 200px;
-    text-align: center;
+  margin-left: 200px;
+  margin-right: 200px;
+  text-align: center;
 }
 
 .intro p {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .intro h4 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .themes h6 {
-    margin-top: 20px;
-    font-weight: 400;
+  margin-top: 20px;
+  font-weight: 400;
 }
 
 .bottom {
-    background-color: #292929; /* Blurred background color */
-    width: auto;
-    height: auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-left: 150px;
-    margin-right: 150px;
+  background-color: #292929; /* Blurred background color */
+  width: auto;
+  height: auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-left: 150px;
+  margin-right: 150px;
 }
 .bottomImg img {
-    width: 400px;
+  width: 400px;
 }
 
 .bottom h1 {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .bottom h5 {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .faq {
@@ -105,125 +105,142 @@ body {
   animation: bounce 2s ease infinite;
 }
 @keyframes bounce {
-    70% { transform:translateY(0%); }
-    80% { transform:translateY(-10%); }
-    90% { transform:translateY(0%); }
-    95% { transform:translateY(-7%); }
-    97% { transform:translateY(0%); }
-    99% { transform:translateY(-3%); }
-    100% { transform:translateY(0); }
+  70% {
+    transform: translateY(0%);
+  }
+  80% {
+    transform: translateY(-10%);
+  }
+  90% {
+    transform: translateY(0%);
+  }
+  95% {
+    transform: translateY(-7%);
+  }
+  97% {
+    transform: translateY(0%);
+  }
+  99% {
+    transform: translateY(-3%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
-
 .reveal {
-    position: relative;
+  position: relative;
+  opacity: 0;
+}
+
+.reveal.active {
+  opacity: 1;
+}
+.active.fade-bottom {
+  animation: fade-bottom 1s ease-in;
+}
+.active.fade-left {
+  animation: fade-left 1s ease-in;
+}
+.active.fade-right {
+  animation: fade-right 1s ease-in;
+}
+@keyframes fade-bottom {
+  0% {
+    transform: translateY(50px);
     opacity: 0;
   }
-  
-  .reveal.active {
+  100% {
+    transform: translateY(0);
     opacity: 1;
   }
-  .active.fade-bottom {
-    animation: fade-bottom 1s ease-in;
+}
+@keyframes fade-left {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
   }
-  .active.fade-left {
-    animation: fade-left 1s ease-in;
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  .active.fade-right {
-    animation: fade-right 1s ease-in;
-  }
-  @keyframes fade-bottom {
-    0% {
-      transform: translateY(50px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  @keyframes fade-left {
-    0% {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-  
-  @keyframes fade-right {
-    0% {
-      transform: translateX(100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
+}
 
-  .bounce-in {
-    animation: bounce-in 3s ease infinite;
+@keyframes fade-right {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
   }
-  @keyframes bounce-in {
-    0% {
-      opacity: 0;
-      transform: scale(.3);
-    }
-    50% {
-      opacity: 1;
-      transform: scale(1.05);
-    }
-    70% { transform: scale(.9); }
-    100% { transform: scale(1); }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
+}
 
-  .accordion-item  {
-    background-color: rgba(36, 33, 33, 0.7);
-    border: #141414;
-    color: white;
+.bounce-in {
+  animation: bounce-in 3s ease infinite;
+}
+@keyframes bounce-in {
+  0% {
+    opacity: 0;
+    transform: scale(0.3);
   }
+  50% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  70% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 
-  .accordion-button:hover {
-    color: #e5e5e5;
-  }
+.accordion-item {
+  background-color: rgba(36, 33, 33, 0.7);
+  border: #141414;
+  color: white;
+}
 
-  .accordion-button:active {
-    color: #141414;
-  }
+.accordion-button:hover {
+  color: #e5e5e5;
+}
 
-  .accordion-button {
-    background-color: rgba(36, 33, 33, 0.7);
-    color: white;
-  }
+.accordion-button:active {
+  color: #141414;
+}
 
-  .card {
-    background-color: rgba(36, 33, 33, 0.7);
-    color: white;
-  }
+.accordion-button {
+  background-color: rgba(36, 33, 33, 0.7);
+  color: white;
+}
+
+.card {
+  background-color: rgba(36, 33, 33, 0.7);
+  color: white;
+}
 
 footer a {
-    text-decoration: none;
-    font-weight: 300;
+  text-decoration: none;
+  font-weight: 300;
 }
 
 footer a:hover {
-    text-decoration: underline;
-    transform: scaleX(1);
+  text-decoration: underline;
+  transform: scaleX(1);
   transform-origin: bottom left;
   transition: transform 0.25s ease-out;
 }
 
 footer h5 {
-    font-weight: 300;
+  font-weight: 300;
 }
 
-.list-group { 
-  position: sticky; 
-  top: 10px; 
-} 
+.list-group {
+  position: sticky;
+  top: 10px;
+}
 
 a {
   color: white;
@@ -240,14 +257,11 @@ button:hover {
 
 /* Small screens (Mobile) */
 @media only screen and (max-width: 576px) {
- 
-
-
 }
 
 /* Medium screens (Tablets) */
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  }
+}
 
 /* Large screens (Larger tablets and small desktops) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -311,3 +325,81 @@ button:hover {
 @media only screen and (min-width: 7680px) {
   /* Your styles for ultra-high resolution screens go here */
 }
+
+
+
+/* sponsor section css */
+
+.sponsor-section {
+  border-radius: 20px;
+  width: 100%;
+  margin-top: 60px;
+  background-color: #141414;
+  color: #fff;
+  padding: 40px 0;
+}
+
+.box {
+  max-width: 1200px;
+  height: 55vh;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background-color: #292929;
+  border-radius: 10px;
+}
+
+.section-title {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 430;
+}
+
+.sponsor-list {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.sponsor {
+  height: 180px;
+  width: 180px;
+  padding: 8px;
+  border-radius: 20px;
+  background-color: #141414;
+  text-align: center;
+  margin: 6px;
+  transition: transform 0.3s;
+}
+
+.sponsor img {
+  margin: 10px;
+  max-width: 100%;
+  height: auto;
+  max-height: 100px;
+  border: 2px solid #fff;
+  border-radius: 10px;
+}
+
+.sponsor-description {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+/* Hover effect */
+.sponsor:hover {
+  transform: scale(1.035);
+  box-shadow: 0 0 15px #141414;
+}
+
+
+/* dummy airtable */
+.airtable-record {
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+} 
+
+
+
+
